--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -14,6 +14,33 @@
     "close_tabs_to_the_left_default_action_name_text": {
         "message": "Закрыть вкладки слева"
     },
+    "close_other_tabs_including_pinned_default_action_name_text": {
+        "message": "Закрыть другие вкладки, включая закрепленные"
+    },
+    "close_other_windows_default_action_name_text": {
+        "message": "Закрыть другие окна"
+    },
+    "close_all_windows_default_action_name_text": {
+        "message": "Закрыть все окна"
+    },
+    "pin_other_tabs_default_action_name_text": {
+        "message": "Закрепить другие вкладки"
+    },
+    "pin_tabs_to_the_right_default_action_name_text": {
+        "message": "Закрепить вкладки справа"
+    },
+    "pin_tabs_to_the_left_default_action_name_text": {
+        "message": "Закрепить вкладки слева"
+    },
+    "unpin_other_tabs_default_action_name_text": {
+        "message": "Открепить другие вкладки"
+    },
+    "close_tabs_with_current_hostname_default_action_name_text": {
+        "message": "Закрыть вкладки с текущим именем хоста"
+    },
+    "close_tabs_with_any_hostname_except_current_default_action_name_text": {
+        "message": "Закрыть вкладки с любым именем хоста, кроме текущего"
+    },
     "actions_section_text": {
         "message": "Действия"
     },
@@ -76,6 +103,9 @@
     },
     "urls_after_action_label_text": {
         "message": "URL-адреса, которые будут открыты после выполнен. действия"
+    },
+    "in_which_windows_to_open_tabs_label_text": {
+        "message": "В каких окнах открывать вкладки"
     },
     "tab_counter_is_visible_label_text": {
         "message": "Показывать счетчик вкладок"
