--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,4 +1,7 @@
 {
+    "name": {
+        "message": "Закрыть другие вкладки+"
+    },
     "description": {
         "message": "Закрывайте/закрепляйте/открепляйте несколько вкладок сразу, фильтруя их по окну, состоянию закреплённости/группированности или имени хоста."
     },
@@ -207,13 +210,13 @@
         "message": "Показывать количество открытых в данный момент вкладок на иконке расширения."
     },
     "advanced_extension_reloader_chrome_link_text": {
-        "message": "⚗️ Close Other Tabs Extended для Chrome"
+        "message": "⚗️ Закрыть другие вкладки+ для Chrome"
     },
     "advanced_extension_reloader_edge_link_text": {
-        "message": "⚗️ Close Other Tabs Extended для Edge"
+        "message": "⚗️ Закрыть другие вкладки+ для Edge"
     },
     "github_link_text": {
-        "message": "😼 Close Other Tabs Extended на Github"
+        "message": "😼 Закрыть другие вкладки+ на Github"
     },
     "hotkey_1": {
         "message": "Действие 1"
