--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -237,18 +237,21 @@
         "message": "Если флажок снят, в качестве основы для сравнения будет использоваться имя хоста АКТИВНОЙ вкладки текущего окна.\n\nПример:\nУ вас открыто два окна. В каждом из них открыто четыре вкладки, две вкладки facebook.com и две вкладки reddit.com. В первом окне активной вкладкой является facebook.com. Во втором - reddit.com. Вы выполняете действие закрытия вкладок с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущее имя хоста\".\n\nЕсли флажок не установлен, неактивные вкладки facebook.com будут закрыты в обоих окнах.\n\nЕсли флажок установлен, неактивная вкладка facebook.com будет закрыта в первом окне, но во втором окне будет закрыта вкладка reddit.com."
     },
     "url_whitelist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по имени хоста: текущее имя хоста\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\"."
+        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по имени хоста: текущее имя хоста\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
     },
     "url_blacklist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по имени хоста\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\"."
+        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по имени хоста\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
+    },
+    "urls_after_action_help_text": {
+        "message": "Разделяйте URL-адреса запятыми."
     },
     "tab_counter_is_visible_help_text": {
         "message": "Показывать количество открытых в данный момент вкладок на иконке расширения."
     },
-    "advanced_extension_reloader_chrome_link_text": {
+    "close_other_tabs_plus_chrome_link_text": {
         "message": "⚗️ Закрыть другие вкладки+ для Chrome"
     },
-    "advanced_extension_reloader_edge_link_text": {
+    "close_other_tabs_plus_edge_link_text": {
         "message": "⚗️ Закрыть другие вкладки+ для Edge"
     },
     "github_link_text": {
