feat: add group/functionality

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -161,6 +161,12 @@
     "unpin_option_text": {
         "message": "Unpin"
     },
+    "group_option_text": {
+        "message": "Group"
+    },
+    "ungroup_option_text": {
+        "message": "Ungroup"
+    },
     "current_window_option_text": {
         "message": "Current window"
     },
