--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -3,7 +3,7 @@
         "message": "Закрыть другие вкладки+"
     },
     "description": {
-        "message": "Закрывайте/закрепляйте/открепляйте несколько вкладок сразу, фильтруя их по окну, состоянию закреплённости/группированности или имени хоста."
+        "message": "Закрывайте/закрепляйте/открепляйте/группируйте/разгруппировывайте несколько вкладок сразу, фильтруя их по различным свойствам."
     },
     "input_width_css": {
         "message": "523px"
@@ -65,12 +65,6 @@
     "unpin_other_tabs_default_action_name_text": {
         "message": "Открепить другие вкладки"
     },
-    "close_tabs_with_current_hostname_default_action_name_text": {
-        "message": "Закрыть вкладки с текущим именем хоста"
-    },
-    "close_tabs_with_any_hostname_except_current_default_action_name_text": {
-        "message": "Закрыть вкладки с любым именем хоста, кроме текущего"
-    },
     "actions_section_text": {
         "message": "Действия"
     },
@@ -116,11 +110,11 @@
     "grouped_tabs_label_text": {
         "message": "Воздействовать на вкладки по состоянию группированности"
     },
-    "hostnames_label_text": {
-        "message": "Воздействовать на вкладки по имени хоста"
+    "urls_label_text": {
+        "message": "Воздействовать на вкладки по URL-адресу"
     },
-    "window_hostname_comparison_label_text": {
-        "message": "Использовать имя хоста активной вкладки каждого окна в качестве основы для сравнения"
+    "window_url_comparison_label_text": {
+        "message": "Использовать URL-адрес активной вкладки каждого окна в качестве основы для сравнения"
     },
     "url_whitelist_label_text": {
         "message": "Белый список URL-адресов"
@@ -212,11 +206,23 @@
     "any_group_except_current_option_text": {
         "message": "Любая группа, кроме текущей"
     },
+    "any_url_option_text": {
+        "message": "Любой URL-адрес"
+    },
+    "current_url_option_text": {
+        "message": "Текущий URL-адрес"
+    },
+    "any_url_except_current_option_text": {
+        "message": "Любой URL-адрес, кроме текущего"
+    },
+    "current_domain_option_text": {
+        "message": "Текущий домен"
+    },
+    "any_domain_except_current_option_text": {
+        "message": "Любое домен, кроме текущего"
+    },
     "current_hostname_option_text": {
         "message": "Текущее имя хоста"
-    },
-    "any_hostname_option_text": {
-        "message": "Любое имя хоста"
     },
     "any_hostname_except_current_option_text": {
         "message": "Любое имя хоста, кроме текущего"
@@ -239,14 +245,14 @@
     "action_position_help_text": {
         "message": "Определяет порядок действий в контекстных меню."
     },
-    "window_hostname_comparison_help_text": {
-        "message": "Если флажок снят, в качестве основы для сравнения будет использоваться имя хоста АКТИВНОЙ вкладки текущего окна.\n\nПример:\nУ вас открыто два окна. В каждом из них открыто четыре вкладки, две вкладки facebook.com и две вкладки reddit.com. В первом окне активной вкладкой является facebook.com. Во втором - reddit.com. Вы выполняете действие закрытия вкладок с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущее имя хоста\".\n\nЕсли флажок не установлен, неактивные вкладки facebook.com будут закрыты в обоих окнах.\n\nЕсли флажок установлен, неактивная вкладка facebook.com будет закрыта в первом окне, но во втором окне будет закрыта вкладка reddit.com."
+    "window_url_comparison_help_text": {
+        "message": "Если флажок снят, в качестве основы для сравнения будет использоваться URL-адрес АКТИВНОЙ вкладки текущего окна.\n\nПример:\nУ вас открыто два окна. В каждом из них открыто четыре вкладки, две вкладки facebook.com и две вкладки reddit.com. В первом окне активной вкладкой является facebook.com. Во втором - reddit.com. Вы выполняете действие закрытия вкладок с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущий домен\".\n\nЕсли флажок не установлен, неактивные вкладки facebook.com будут закрыты в обоих окнах.\n\nЕсли флажок установлен, неактивная вкладка facebook.com будет закрыта в первом окне, но во втором окне будет закрыта вкладка reddit.com."
     },
     "url_whitelist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по имени хоста: текущее имя хоста\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
+        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по URL-адресу: Текущий домен\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
     },
     "url_blacklist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по имени хоста\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
+        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по URL-адресу\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
     },
     "urls_after_action_help_text": {
         "message": "Разделяйте URL-адреса запятыми."
