feat(messages): update description

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -3,7 +3,7 @@
         "message": "Закрыть другие вкладки+"
     },
     "description": {
-        "message": "Закрывайте/закрепляйте/открепляйте/группируйте/разгруппировывайте несколько вкладок сразу, фильтруя их по различным свойствам."
+        "message": "Закрывайте/закрепляйте/открепляйте/группируйте/разгруппируйте несколько вкладок сразу, фильтруя их по различным свойствам."
     },
     "input_width_css": {
         "message": "523px"
